--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@ body {
     background-color: #100930;
     color: white;
     margin: 0;
+    /* overflow: hidden; */
 }
 
 body.opened-nav {
@@ -10,6 +11,9 @@ body.opened-nav {
 
 .overflow-hidden {
     overflow: hidden;
+    /* overflow-y: scroll; */
+    position: relative;
+    /* height: 100vh; */
 }
 
 h1 {
